[gd_scene load_steps=5 format=3 uid="uid://yyqppf1bcjkh"]

[ext_resource type="PackedScene" uid="uid://coixudeooj0dc" path="res://squid_boss/squid_body.tscn" id="1_1h1hh"]
[ext_resource type="Script" uid="uid://cshoochj27c8" path="res://squid_boss/squid_boss.gd" id="1_xvutq"]
[ext_resource type="PackedScene" uid="uid://c8cd3rc7x1888" path="res://squid_boss/squid_arm.tscn" id="2_xvutq"]
[ext_resource type="Script" uid="uid://cjwjixspceeoa" path="res://squid_boss/squid_health_component.gd" id="4_dut5p"]

[node name="SquidBoss" type="Node2D" node_paths=PackedStringArray("squid_body", "arms", "right_health", "left_health", "attack_timer", "state_timer")]
z_index = -1
script = ExtResource("1_xvutq")
squid_body = NodePath("SquidBody")
arms = [NodePath("Arms/SquidArm"), NodePath("Arms/SquidArm2"), NodePath("Arms/SquidArm3"), NodePath("Arms/SquidArm4"), NodePath("Arms/SquidArm5"), NodePath("Arms/SquidArm6")]
right_health = NodePath("RightHealth")
left_health = NodePath("LeftHealth")
attack_timer = NodePath("AttackTimer")
state_timer = NodePath("StateTimer")

[node name="SquidBody" parent="." instance=ExtResource("1_1h1hh")]

[node name="Arms" type="Node2D" parent="."]

[node name="SquidArm" parent="Arms" instance=ExtResource("2_xvutq")]
position = Vector2(225, 600)
is_forward = false

[node name="SquidArm2" parent="Arms" instance=ExtResource("2_xvutq")]
position = Vector2(-225, 600)
is_forward = false

[node name="SquidArm3" parent="Arms" instance=ExtResource("2_xvutq")]
position = Vector2(675, 775)

[node name="SquidArm4" parent="Arms" instance=ExtResource("2_xvutq")]
position = Vector2(-675, 775)

[node name="SquidArm5" parent="Arms" instance=ExtResource("2_xvutq")]
position = Vector2(450, 950)

[node name="SquidArm6" parent="Arms" instance=ExtResource("2_xvutq")]
position = Vector2(-450, 950)

[node name="RightHealth" type="Node" parent="." node_paths=PackedStringArray("squid_boss")]
script = ExtResource("4_dut5p")
squid_boss = NodePath("..")

[node name="LeftHealth" type="Node" parent="." node_paths=PackedStringArray("squid_boss")]
script = ExtResource("4_dut5p")
squid_boss = NodePath("..")
is_right = false

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="eye_damage" from="RightHealth" to="." method="hurt"]
[connection signal="eye_death" from="RightHealth" to="." method="change_eye"]
[connection signal="eye_damage" from="LeftHealth" to="." method="hurt"]
[connection signal="eye_death" from="LeftHealth" to="." method="change_eye"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
